crates/scribe-core/tests/snapshots/fixtures__svg-space-tspan-paragraph.snap
---
source: crates/scribe-core/tests/fixtures.rs
expression: output
---
<?xml version="1.0" encoding="UTF-8"?>
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="scribe-gsfqf9" class="scribe-gsfqf9-root" width="480" height="280" viewBox="0 0 480 280">
  <style>
    #scribe-gsfqf9 { color-scheme: light dark; }
    #scribe-gsfqf9 .scribe-gsfqf9-text { all: revert; fill: transparent; stroke: none; font-family: sans-serif; font-style: normal; font-weight: normal; font-variant: normal; font-stretch: normal; letter-spacing: normal; word-spacing: normal; text-anchor: start; text-decoration: none; text-transform: none; direction: ltr; user-select: text; -webkit-user-select: text; white-space: pre; }
    #scribe-gsfqf9 .scribe-gsfqf9-text text, #scribe-gsfqf9 .scribe-gsfqf9-text tspan { fill: inherit; stroke: inherit; font-family: inherit; font-style: inherit; font-weight: inherit; font-variant: inherit; font-stretch: inherit; letter-spacing: inherit; word-spacing: inherit; text-anchor: inherit; text-decoration: inherit; text-transform: inherit; direction: inherit; unicode-bidi: isolate; white-space: inherit; user-select: inherit; -webkit-user-select: inherit; }
    #scribe-gsfqf9 .scribe-gsfqf9-text::selection, #scribe-gsfqf9 .scribe-gsfqf9-text ::selection { fill: HighlightText; background: color-mix(in srgb, Highlight 35%, transparent); }
  </style>
  <image href="paragraph.png" width="480" height="280"/>
  <g class="scribe-gsfqf9-text">
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="33" y="57" font-size="35" textLength="118" lengthAdjust="spacingAndGlyphs">Reading</tspan><tspan class="scribe-gsfqf9-space" x="151" y="57" font-size="35" textLength="11" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="162" y="51" font-size="25" textLength="134" lengthAdjust="spacingAndGlyphs">Machines</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="31" y="107.6" font-size="17" textLength="37" lengthAdjust="spacingAndGlyphs">The</tspan><tspan class="scribe-gsfqf9-space" x="68" y="107.6" font-size="17" textLength="6.63" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="74.63" y="110.58" font-size="21.4" textLength="50.73" lengthAdjust="spacingAndGlyphs">quick</tspan><tspan class="scribe-gsfqf9-space" x="125.36" y="110.58" font-size="21.4" textLength="5.64" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="131" y="106.6" font-size="17" textLength="58" lengthAdjust="spacingAndGlyphs">brown</tspan><tspan class="scribe-gsfqf9-space" x="189" y="106.6" font-size="17" textLength="7" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="196" y="107.4" font-size="18" textLength="27" lengthAdjust="spacingAndGlyphs">fox</tspan><tspan class="scribe-gsfqf9-space" x="223" y="107.4" font-size="18" textLength="6" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="229" y="109.8" font-size="21" textLength="57" lengthAdjust="spacingAndGlyphs">jumps</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="32" y="144.2" font-size="14" textLength="43" lengthAdjust="spacingAndGlyphs">over</tspan><tspan class="scribe-gsfqf9-space" x="75" y="144.2" font-size="14" textLength="6" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="81" y="143.4" font-size="18" textLength="31" lengthAdjust="spacingAndGlyphs">the</tspan><tspan class="scribe-gsfqf9-space" x="112" y="143.4" font-size="18" textLength="6" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="118" y="145" font-size="20" textLength="38" lengthAdjust="spacingAndGlyphs">lazy</tspan><tspan class="scribe-gsfqf9-space" x="156" y="145" font-size="20" textLength="11" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="167" y="145.2" font-size="19" textLength="35" lengthAdjust="spacingAndGlyphs">dog,</tspan><tspan class="scribe-gsfqf9-space" x="202" y="145.2" font-size="19" textLength="8" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="210" y="143.4" font-size="18" textLength="34" lengthAdjust="spacingAndGlyphs">and</tspan><tspan class="scribe-gsfqf9-space" x="244" y="143.4" font-size="18" textLength="13" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="257" y="143.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">does</tspan></text>
    <text class="scribe-gsfqf9-line"><tspan class="scribe-gsfqf9-word" x="31" y="180.2" font-size="19" textLength="14" lengthAdjust="spacingAndGlyphs">it</tspan><tspan class="scribe-gsfqf9-space" x="45" y="180.2" font-size="19" textLength="6.67" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="51.67" y="183.08" font-size="23.3" textLength="52.66" lengthAdjust="spacingAndGlyphs">again</tspan><tspan class="scribe-gsfqf9-space" x="104.33" y="183.08" font-size="23.3" textLength="5.67" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="110" y="179.8" font-size="16" textLength="22" lengthAdjust="spacingAndGlyphs">on</tspan><tspan class="scribe-gsfqf9-space" x="132" y="179.8" font-size="16" textLength="7.26" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="139.26" y="178.8" font-size="17.94" textLength="31.47" lengthAdjust="spacingAndGlyphs">the</tspan><tspan class="scribe-gsfqf9-space" x="170.73" y="178.8" font-size="17.94" textLength="5.27" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="176" y="180" font-size="15" textLength="42" lengthAdjust="spacingAndGlyphs">next</tspan><tspan class="scribe-gsfqf9-space" x="218" y="180" font-size="15" textLength="7" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="225" y="179.6" font-size="17" textLength="38" lengthAdjust="spacingAndGlyphs">line.</tspan></text>
    <text class="scribe-gsfqf9-line" transform="rotate(0.53 111.5 236.5)"><tspan class="scribe-gsfqf9-word" x="30.99" y="239.14" font-size="12" textLength="44" lengthAdjust="spacingAndGlyphs">Printed</tspan><tspan class="scribe-gsfqf9-space" x="74.99" y="239.14" font-size="12" textLength="2.99" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="77.98" y="238.65" font-size="13" textLength="12" lengthAdjust="spacingAndGlyphs">in</tspan><tspan class="scribe-gsfqf9-space" x="89.98" y="238.65" font-size="13" textLength="5" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="94.99" y="238.62" font-size="12" textLength="29" lengthAdjust="spacingAndGlyphs">1996</tspan><tspan class="scribe-gsfqf9-space" x="123.99" y="238.62" font-size="12" textLength="4" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="127.99" y="238.59" font-size="11" textLength="12" lengthAdjust="spacingAndGlyphs">at</tspan><tspan class="scribe-gsfqf9-space" x="139.99" y="238.59" font-size="11" textLength="4.01" lengthAdjust="spacingAndGlyphs"> </tspan><tspan class="scribe-gsfqf9-word" x="144" y="241.28" font-size="16" textLength="48" lengthAdjust="spacingAndGlyphs">Leyden.</tspan></text>
  </g>
</svg>
